Fixed map size on small screens

--- a/css/hysplit.css
+++ b/css/hysplit.css
@@ -11,11 +11,13 @@ body {margin: 0}
     /* min-height: 650px; */
 }
 #locator {
-    width: 280px;
+    width: 345px;
     max-width: 100%;
-    height: 280px;
+    height: 345px;
     z-index: 0;
+    border: none;
     border-radius: 2px;
+    padding: 0px;
 }
 .leaflet-top, .leaflet-right {
     max-width: 90%;
